# PFC-UFMG

./: .gitignore  README.md  docker-compose.yaml
docker/: sim.Dockerfile  vg.Dockerfile
shared/crazyflie-lib-python/cflib/crtp/: udpdriver.py
shared/crazyswarm2_ws/cache/: 2F026512.json  E7298E3D.json
shared/crazyswarm2_ws/install/: local_setup.sh  setup.sh
shared/crazyswarm2_ws/install/crazyflie/lib/crazyflie/: aideck_streamer.py  battery  cfmult.py  chooser.py  comCheck  console  crazyflie_server  crazyflie_server.py  downloadUSDLogfile  flash.py  gui.py  listLogVariables  listMemories  listParams  log  reboot  scan  setParam  simple_mapper_multiranger.py  teleop  vel_mux.py  version
shared/crazyswarm2_ws/install/crazyflie/share/crazyflie/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
shared/crazyswarm2_ws/install/crazyflie_examples/lib/crazyflie_examples/: arming  cmd_full_state  figure8  goto_unicast  group_mask  hello_world  infinite_flight  multi_trajectory  nice_hover  set_param  swap
shared/crazyswarm2_ws/install/crazyflie_examples/share/crazyflie_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  (+2 more)
shared/crazyswarm2_ws/log/: latest_build
shared/pfc_ws/src/control_validation/: package.xml  setup.cfg  setup.py
shared/pfc_ws/src/control_validation/control_validation/: node.py
shared/pfc_ws/src/control_validation/launch/: control_validation.launch.py
shared/pfc_ws/src/control_validation_coro/: package.xml  setup.cfg  setup.py
shared/pfc_ws/src/control_validation_coro/control_validation_coro/: node.py
shared/pfc_ws/src/control_validation_coro/launch/: control_validation_coro.launch.py
shared/pfc_ws/src/control_validation_coro/resource/: control_validation_coro
shared/pfc_ws/src/drbecm_coro/: package.xml  setup.cfg  setup.py
shared/pfc_ws/src/drbecm_coro/config/: drbecm_coro.rviz
shared/pfc_ws/src/drbecm_coro/drbecm_coro/: algorithm.py  metrics.py  node.py  visualization.py
shared/pfc_ws/src/drbecm_coro/launch/: drbecm.launch.py
shared/pfc_ws/worlds/: coro.world  porcelain_room.world
shared/startup/: control_validation.yaml  control_validation_crazyflies.yaml  control_validation_real.yaml  drbecm_real.yaml  session.yaml  start.sh  start_control_validation.sh  start_control_validation_real.sh  start_drbecm_real.sh
(+661 files in other folders)
