<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control_validation_coro</name>
  <version>0.1.0</version>
  <description>Four Crazyflie full-state control validation mission for coro.world.</description>
  <maintainer email="yanfigueiras@example.com">yanfigueiras</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>crazyflie_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
