<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drbecm_coro</name>
  <version>0.1.0</version>
  <description>Simple DRBECM exploration controller for coro.world and Crazyflie.</description>
  <maintainer email="yanfigueiras@example.com">yanfigueiras</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>crazyflie_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
